Spacing fix

--- a/_sass/proof_of_time_contest.scss
+++ b/_sass/proof_of_time_contest.scss
@@ -109,6 +109,10 @@
             color: #000000;
             margin-bottom: 64px;
         }
+
+        .less-space-after {
+            margin-bottom: 32px;
+        }
         
         a {
             color: #48A7A9;
@@ -288,6 +292,10 @@
                 font-weight: 400;
                 margin-bottom: 48px;
             }
+
+            .less-space-after {
+                margin-bottom: 32px;
+            }    
 
             .prize-rules-container {
                 margin-bottom: 40px;
